--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "maffpool/testlib",
     "type": "library",
-
+    "require": {
+        "php": ">=5.3"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.1.x-dev"
